# Triage

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: README.md  run_manager.py  server.py
docs/: DEMO_RUNBOOK.md  STATUS.md  TRIAGE_INTEGRATIONS.md  TRIAGE_OVERVIEW.md
docs/superpowers/plans/: 2026-06-20-phase-1-repo-scaffold.md  2026-06-20-phase-2-band-module.md  2026-06-20-phase-3-hypothesis-agent.md  2026-06-20-phase-3-repro-echo.md  2026-06-20-phase4-repro-agent-browserbase.md  2026-06-20-phase5-hypothesis-agent-real.md  2026-06-20-phase5-parser-agent-real.md  2026-06-20-phase6-retry-loop.md  2026-06-20-phase7-frontend.md  2026-06-20-phase7a-tracing-substrate.md  2026-06-20-phase7b-phoenix-evaluator.md  2026-06-20-phase7c-claude-synthesis.md  2026-06-21-phase7.5-outer-loop.md  2026-06-21-phoenix-to-ax-migration.md
docs/superpowers/specs/: 2026-06-20-phase7-arize-design.md  2026-06-20-phase7-frontend-design.md  2026-06-21-phoenix-to-ax-migration.md  phase7-report.schema.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  replay.test.ts  replay.ts  test-setup.ts  types.test.ts  types.ts
frontend/src/components/: BrowserView.test.tsx  BrowserView.tsx  LiveLog.test.tsx  LiveLog.tsx  ReportCard.test.tsx  ReportCard.tsx  UrlInput.test.tsx  UrlInput.tsx
frontend/src/fixtures/: recorded-run.json
frontend/src/styles/: app.css  tokens.css
scripts/: demo.sh  handshake.py  hypothesis_echo_demo.py  phase6_live_run.py  phase7_eval.py  phase7_traced_run.py  test_echo_chain.py  three_way_smoke.py
tests/: _tracing_helpers.py  test_backend_server.py  test_band_module.py  test_claude_call_spans.py  test_config.py  test_eval_ax_logging.py  test_eval_code_checks.py  test_eval_ground_truth.py  test_eval_judges.py  test_eval_run_eval.py  test_hypothesis_agent.py  test_hypothesis_reasoning.py  test_memory_backend_ax.py  test_memory_backend_phoenix.py  test_memory_distill.py  test_memory_facade.py  test_memory_history.py  test_memory_query.py  test_parser_agent.py  test_parser_claude.py  test_parser_echo.py  test_parser_github.py  test_parser_prior_context.py  test_phase75_booth_injection.py  test_phase7_capture.py  test_repro_browser.py  test_repro_browser_tracing.py  test_repro_echo.py  test_repro_echo_tracing.py  test_repro_loop.py  test_run_artifacts.py  test_run_trace.py  test_synthesis_schema.py  test_synthesize.py  test_tracing_setup.py
triage/: __init__.py  config.py
triage/eval/: __init__.py  code_checks.py  ground_truth.py  judges.py  run_eval.py
triage/hypothesis_agent/: README.md  __init__.py  __main__.py  agent.py  reasoning.py
triage/memory/: __init__.py  distill.py  history.py  query.py  types.py
triage/memory/backends/: __init__.py  ax.py  phoenix.py
triage/parser_agent/: README.md  __init__.py  __main__.py  agent.py  claude.py  echo.py  github.py
triage/repro_agent/: README.md  __init__.py  __main__.py  browser.py  echo.py  loop.py
triage/shared/: __init__.py  band.py
triage/synthesis/: __init__.py  schema.py  synthesize.py
triage/tracing/: __init__.py  artifacts.py  run_context.py  setup.py
