[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage"
version = "0.1.0"
description = "Autonomous bug-reproduction agent — UC Berkeley AI Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    # --- Installed in Phase 1 (config loader + tests need these) ---
    "python-dotenv>=1.0",
    # --- Listed for later phases; NOT imported yet. Versions verified
    #     against live docs in the phase that first uses each. ---
    "anthropic",                                  # Claude reasoning (all agents)
    "httpx",                                      # GitHub issue fetch (ParserAgent)
    "band-sdk",                                   # Band coordination (Phase: Band)
    "stagehand",                                  # Browserbase driver (ReproAgent)
    "playwright",                                  # CDP screenshots + console errors (ReproAgent)
    # --- Arize AX (PRIMARY trace backend) — verified 2026-06-21 ---
    "arize-otel>=0.13",                           # arize.otel.register → otlp.arize.com (WRITE path)
    "arize>=8.35",                                # ArizeClient: spans.update_evaluations (eval logging)
    "arize-ax-cli>=0.25",                         # `ax` CLI: spans export (READ-back) + verification
    # --- Arize Phoenix (FALLBACK backend + LOCAL judge engine) — verified 2026-06-20 ---
    "arize-phoenix>=17.9",                        # tracing fallback (TRIAGE_TRACE_BACKEND=phoenix)
    "openinference-instrumentation-anthropic>=1.0.6",  # auto-instrument Claude calls (both backends)
    "opentelemetry-sdk>=1.42",                    # manual retry spans
    "arize-phoenix-evals>=3.1",                   # LOCAL LLM-judge engine (backend-agnostic, Phase 7B)
    "arize-phoenix-client>=2.9",                  # Phoenix annotation fallback (Phase 7B)
    "pandas>=2.0",                                # eval dataframes (Phase 7B)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
